2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>

	* libabi/Makefile.am:
	* libabi/abi.cpp:
	* libabi/abi.h:
	* libabi/op_abi.h:
	* libabi/tests/Makefile.am:
	* libabi/op_abi.cpp: removed
	* libabi/op_abi.c: new file, abi file writing in plain C

	* configure.in:
	* daemon/Makefile.am:
	* daemon/oprofiled.c:
	* daemon/liblegacy/Makefile.am:
	* doc/Makefile.am:
	* doc/oprofile.xml: build unconditionnaly libabi

	* doc/opimport.1.in: new file, man page for opimport, need some
	  tweaking probably

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui: add a button to reset the profiling
	  session and an edit field to setup the callgraph depth

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.h:
	* gui/oprof_start_util.cpp:
	* gui/oprof_start.cpp: hardcode config directory to /root,
	  rename get_user_filename() to get_config_filename()

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.cpp:

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start_util.cpp: fix detection of stopped daemon. Fix a
	  miscounted interrupt nr after a start/stop/start

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* doc/oprofile.xml: improve documentation about RTC mode.

2005-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: fix events parsing according to the way
	  we store them in setupfile changed by the last patch.

2005-08-02  Richard Purdie  <rpurdie@openedhand.com>

	* HACKING: Add note about bashisms being bad
	* doc/oprofile.xml: Remove bash dependency
	* utils/opcontrol: remove bashisms from the script

2005-08-02  Richard Purdie  <rpurdie@openedhand.com>

	* utils/opcontrol: remove some bashism, not yet enough to remove
	  bash dependency

2005-07-21  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.9.2cvs
