@@ -13,7 +13,6 @@ for some pointers and/or read HACKING and doc/CodingStyle.
  o op_bfd.cpp:get_linenr() see FIXME about the use of ibfd/dbfd, needs test.
  o decide on -m tgid semantics for anon regions
  o if ev67 is not fixed, back it out
- o opimport needs a man page
  o lapic : module should says "didn't find apic" if needed, FAQ and doc should
   speak a bit about lapic kernel option on x86 and recent kernel
 
@@ -114,7 +113,6 @@ vma      samples  cum. samples  %           cum. %     symbol name             i
 	o allow user to add it's own pattern in user.pat, document it.
 	o hard code ${typename} regular definition to remove all current limitations (difficult, perhaps after 1.0 ?).
  o oprof_start dialog size is too small initially
- o oprof_start key movement through events doesn't change help text
  o i18n. We need a good formatter, and also remember format_percent()
  o opannotate --source --output-dir=~moz/op/ /usr/bin/oprofiled
    will fail because the ~ is not expanded (no space around it) (popt bug I say)
