@@ -1,5 +1,10 @@
 2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* gui/ui/oprof_start.base.ui: handle ui events help string when using
+	  keyboard to navigate through event list
+
+2005-08-04  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libabi/Makefile.am:
 	* libabi/abi.cpp:
 	* libabi/abi.h:
